fixed dark mode in story editor

--- a/next/next-all/components/story/text_lines/line_hints.module.css
+++ b/next/next-all/components/story/text_lines/line_hints.module.css
@@ -14,7 +14,7 @@
 }
 .tooltiptext_editor {
     font-style: italic;
-    background: whitesmoke;
+    background: var(--editor-hints-background);
     font-size: 0.9em;
     opacity: .5;
     margin-left: -4px;
